Post View: Draw image link on top of the image

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -258,12 +258,14 @@ a.logo
 	text-align: center
 	margin: 0 auto
 	padding: 0
+	position: relative
 	//margin: 0 0 0 65px
 	& img
 		max-width: 100%
 	.post-view-content-image-link
-		text-align: right
-		padding: 0 15px 0 
+		position: absolute
+		right: 10px
+		bottom: 5px
 	&:hover .post-view-content-image-link
 		color: $color_brand_main
 
