--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -12,11 +12,11 @@
 
 	<div class="post-view">
 		<div class="post-view-rate">
-			<a class="up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="#" title="Upvote, click again to undo">
+			<a class="up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}" title="Upvote, click again to undo">
 				<i class="fa fa-angle-up"></i>
 			</a>
-			<span class="middle">{{post.rating_delta}}</span>
-			<a class="down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}" href="#" title="Downvote, click again to undo">
+			<span class="middle rating">{{post.rating_delta}}</span>
+			<a class="down{% if post.user_rating and not post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='0')}}" title="Downvote, click again to undo">
 				<i class="fa fa-angle-down"></i>
 			</a>
 		</div>
@@ -78,14 +78,14 @@
 									{{comment.content|safe}}
 								</div>
 								<div class="post-view-comments-item-details">
-									<a class="post-view-comments-item-rate up{% if comment.user_rating and comment.user_rating.is_positive %} rated{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='1')}}">
+									<a class="post-view-comments-item-rate comment-up up{% if comment.user_rating and comment.user_rating.is_positive %} rated{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='1')}}">
 										<i class="fa fa-chevron-up"></i>
 									</a>
 									<a class="post-view-comments-item-rate down{% if comment.user_rating and not comment.user_rating.is_positive %} rated{% endif %}" href="{{url_for('comments.rate', comment_id=comment.id, rating='0')}}">
 										<i class="fa fa-chevron-down"></i>
 									</a>
 									<span class="separator"></span>
-									{{comment.rating.positive - comment.rating.negative}}
+									<span class="rating">{{comment.rating_delta}}</span>
 									<span class="separator"></span>
 									<span title="{{comment.creation_date.strftime('%H:%M on %d %B, %Y')}}">{{comment.pretty_creation_date}}</span>
 									<small>by</small> {{comment.user.first_name}} {{comment.user.last_name}}
@@ -155,29 +155,46 @@
 
 	CKEDITOR.config.forcePasteAsPlainText = true;
 
-	$(".up").click(function(e) {
-		e.preventDefault();
-		$.get("{{url_for('posts.rate', uuid=post.uuid, rating='1')}}", function(data){
-			$(".down").removeClass('rated');
-			if (data['rating'] === 'True') {
-				$(".up").addClass('rated');
+	var upvote = function(up, down, rate) {
+		$.get(up.attr("href"), function(data){
+			down.removeClass('rated');
+			if (data['rating'] === "True") {
+				up.addClass('rated');
 			} else {
-				$(".up").removeClass('rated');
+				up.removeClass('rated');
 			}
-			$(".middle").text(data['rating_delta']);
+			rate.text(data['rating_delta']);
 		});
-	});
-	$(".down").click(function(e) {
-		e.preventDefault();
-		$.get("{{url_for('posts.rate', uuid=post.uuid, rating='0')}}", function(data){
-			$(".up").removeClass('rated');
-			if (data['rating'] === 'False') {
+	}
+
+	var downvote = function(up, down, rate) {
+		$.get(down.attr("href"), function(data){
+			up.removeClass('rated');
+			if (data['rating'] === "False") {
 				$(".down").addClass('rated');
 			} else {
 				$(".down").removeClass('rated');
 			}
-			$(".middle").text(data['rating_delta']);
+			rate.text(data['rating_delta']);
 		});
+	}
+
+	$(".up").click(function(e) {
+		e.preventDefault();
+		var up = $(this);
+		var rate = $(this).siblings('.rating');
+		var down = $(this).siblings('.down');
+		upvote(up, down, rate)	
 	});
+
+	$(".down").click(function(e) {
+		e.preventDefault();
+		var up = $(this).siblings('.up');
+		var rate = $(this).siblings('.rating');
+		var down = $(this);
+		downvote(up, down, rate)	
+	});
+
+
 	</script>
 {% endblock %}
