--- a/blender-today/application/templates/security/login_user.html
+++ b/blender-today/application/templates/security/login_user.html
@@ -54,7 +54,7 @@
         <h2>No account yet?</h2>
         <a href="" class="btn btn-default btn-block btn-lg">Blender ID</a>
         <a href="{{url_for('google_login')}}" class="btn btn-default btn-block btn-lg">Google</a>
-        <a href="" class="btn btn-default btn-block btn-lg">Facebook</a>
+        <a href="{{url_for('facebook_login')}}" class="btn btn-default btn-block btn-lg">Facebook</a>
         <a href="{{url_for_security('register')}}">Use your email to register</a>
       </div>
     </div>
