Blender ID OAuth
Requires more advanced configuration, since we have the possibility of
running the OAuth server in development mode locally. Also refactored
the login function into user_get_or_create().

--- a/blender-today/application/templates/security/login_user.html
+++ b/blender-today/application/templates/security/login_user.html
@@ -52,7 +52,7 @@
       </div> <!-- col-md-6 -->
       <div class="col-md-6">
         <h2>No account yet?</h2>
-        <a href="" class="btn btn-default btn-block btn-lg">Blender ID</a>
+        <a href="{{url_for('blender_id_login')}}" class="btn btn-default btn-block btn-lg">Blender ID</a>
         <a href="{{url_for('google_login')}}" class="btn btn-default btn-block btn-lg">Google</a>
         <a href="{{url_for('facebook_login')}}" class="btn btn-default btn-block btn-lg">Facebook</a>
         <a href="{{url_for_security('register')}}">Use your email to register</a>
