WIP on Submit page, still ugly and non working

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -371,6 +371,12 @@ a.logo
 	&.post-submit-field-category, &.post-submit-field-content, &.post-submit-field-picture
 		width: 100%
 
+.post-submit-field-title, .post-submit-field-url,
+.post-submit-field-category, .post-submit-field-content, #post_content,
+.post-submit-field-picture, .post-submit #picture,
+.post-submit-field-submit
+	display: none
+
 .post-submit .post-submit-field-type
 	display: block
 	margin: 20px 0
