More WIP on Submit page

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -371,10 +371,10 @@ a.logo
 	&.post-submit-field-category, &.post-submit-field-content, &.post-submit-field-picture
 		width: 100%
 
-.post-submit-field-title, .post-submit-field-url,
-.post-submit-field-category, .post-submit-field-content, #post_content,
-.post-submit-field-picture, .post-submit #picture,
-.post-submit-field-submit
+.post-submit-div-title, .post-submit-div-url,
+.post-submit-div-category, .post-submit-div-content, 
+.post-submit-div-picture,
+.post-submit-div-submit
 	display: none
 
 .post-submit .post-submit-field-type
