--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -34,7 +34,12 @@
 						<i class="fa fa-angle-down"></i>
 					</a>
 				</div>
-				<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}">
+				<a href="
+						{% if post.post_type.url == 'link' %}
+							{{post.content}}
+						{% else %}
+							{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}
+						{% endif %}">
 					<div class="post-index-item-type {{post.post_type.url}}"
 					  {% if post.picture %}style="background: url({{post.thumbnail('s')}}) top left no-repeat"{% endif %}>
 						{% if post.post_type.url == 'link' %}
