--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -24,7 +24,7 @@
 			<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
 				{{post.title}}
 			</a>
-			<a class="flag{% if post.user_rating and post.user_rating.is_flagged %} rated{% endif %}" href="{{url_for('posts.flag', uuid=post.uuid)}}" title="Flag, click again to undo">
+			<a class="flag{% if post.user_rating and post.user_rating.is_flagged %} flagged{% endif %}" href="{{url_for('posts.flag', uuid=post.uuid)}}" title="Flag, click again to undo">
 				<i class="fa fa-flag"></i>
 			</a>
 			
@@ -117,7 +117,7 @@
 									<small>by</small> {{comment.user.first_name}} {{comment.user.last_name}}
 									<span class="separator"></span>
 									<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}#comment-{{comment.id}}"><i class="fa fa-link"></i></a>
-									<a class="post-view-comments-item-flag{% if comment.user_rating and not comment.user_rating.is_flagged %} flagged{% endif %}" href="{{url_for('comments.flag', comment_id=comment.id)}}">
+									<a class="post-view-comments-item-flag flag{% if comment.user_rating and not comment.user_rating.is_flagged %} flagged{% endif %}" href="{{url_for('comments.flag', comment_id=comment.id)}}">
 										<i class="fa fa-flag"></i>
 									</a>
 								</div>
@@ -222,6 +222,12 @@
 		var rate = $(this).siblings('.rating');
 		var down = $(this);
 		downvote(up, down, rate)	
+	});
+
+	$(".flag").click(function(e) {
+		e.preventDefault();
+		$(this).toggleClass('flagged');
+		$.get($(this).attr("href"));
 	});
 
 
