--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -538,6 +538,102 @@ footer
 	&:focus .nav-logout-widget-icon
 		color: crimson
 
+/* Login */
+.dialog, .dialog__overlay
+	width: 100%
+	height: 100%
+	top: 0
+	left: 0
+
+.dialog
+	position: fixed
+	display: -webkit-flex
+	display: flex
+	-webkit-align-items: center
+	align-items: center
+	-webkit-justify-content: center
+	justify-content: center
+	pointer-events: none
+
+.dialog__overlay
+	position: absolute
+	z-index: 1
+	background: rgba(darken(desaturate($color_brand_main, 15%), 25%), 0.6)
+	opacity: 0
+	-webkit-transition: opacity 0.3s
+	transition: opacity 0.3s
+	-webkit-backface-visibility: hidden
+
+.dialog--open .dialog__overlay
+	opacity: 1
+	pointer-events: auto
+
+.dialog__content
+	width: 80%
+	max-width: 800px
+	min-width: 290px
+	background: white
+	padding: 2em
+	position: relative
+	z-index: 5
+	opacity: 0
+	+border-radius(3px)
+	+box-shadow(2px, 2px, 0, black, .1)
+
+.dialog--open .dialog__content
+	pointer-events: auto
+
+.dialog.dialog--open .dialog__content,
+.dialog.dialog--close .dialog__content
+	-webkit-animation-duration: 0.3s
+	animation-duration: 0.3s
+	-webkit-animation-fill-mode: forwards
+	animation-fill-mode: forwards
+
+.dialog.dialog--open .dialog__content
+	-webkit-animation-name: effect-dialog-open
+	animation-name: effect-dialog-open
+
+.dialog.dialog--close .dialog__content
+	-webkit-animation-name: effect-dialog-close
+	animation-name: effect-dialog-close
+
+@-webkit-keyframes effect-dialog-open
+	0%
+		opacity: 0
+		-webkit-transform: scale3d(1.1, 1.1, 1)
+	100%
+		opacity: 1
+		-webkit-transform: scale3d(1, 1, 1)
+
+
+@keyframes effect-dialog-open
+	0%
+		opacity: 0
+		-webkit-transform: scale3d(1.1, 1.1, 1)
+		transform: scale3d(1.1, 1.1, 1)
+	100%
+		opacity: 1
+		-webkit-transform: scale3d(1, 1, 1)
+		transform: scale3d(1, 1, 1)
+
+
+@-webkit-keyframes effect-dialog-close
+	0%
+		opacity: 1
+	100%
+		opacity: 0
+		-webkit-transform: scale3d(0.9, 0.9, 1)
+
+
+@keyframes effect-dialog-close
+	0%
+		opacity: 1
+	100%
+		opacity: 0
+		-webkit-transform: scale3d(0.9, 0.9, 1)
+		transform: scale3d(0.9, 0.9, 1)
+
 
 /* CKEditor Overrides */
 .cke_chrome
