--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block page_title %}Home{% endblock %} - Blender Today - Community-driven Blender News</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Community-driven Blender News">
-    <meta name="author" content="">
-    
+    <meta name="keywords" content="news, community, blender, animation, 3d" />
+    <meta name="description" content="Community-driven Blender News"/>
+    <meta name="author" content="Blender Today"/>
+
     {% if config.USE_ASSETS_CDN %}
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
@@ -18,7 +20,7 @@
     <link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet">
     {% endif %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
 
     <!-- IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -52,9 +54,15 @@
 
         <nav class="collapse navbar-collapse" id="navbar-collapse-menu">
           <ul class="nav navbar-nav navbar-right">
-            <li {% if title == 'submit': %} class="active"{% endif %}>
-              <a href="{{ url_for('posts.submit') }}">Submit</a>
+
+            <li>
+              <a data-dialog="submit" class="trigger">Submit</a>
             </li>
+
+            <li {% if title == 'submit': %} class="active"{% endif %}>
+              <a href="{{ url_for('posts.submit') }}">Old Submit</a>
+            </li>
+
             <li {% if title == 'about': %} class="active"{% endif %}>
               <a href="{{ url_for('about') }}">About</a>
             </li>
@@ -118,10 +126,24 @@
           </p>
         </span>
       </div> <!-- /footer-container -->
+
+
+      <div id="submit" class="dialog">
+        <div class="dialog__overlay"></div>
+          <div class="dialog__content">
+            <iframe src="{{ url_for('posts.submit') }}" style="border: none; width: 100%; height: 400px"></iframe>
+            <button class="action" data-dialog-close>
+              <i class="fa fa-times"></i>
+            </button>
+        </div>
+      </div>
+
     </footer>
     {% if config.USE_ASSETS_CDN %}
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+
     {% else %}
     <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
     <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
@@ -139,6 +161,22 @@
         });
       });
     </script>
+
+    <script src="{{url_for('static', filename='js/dialogFx.js')}}"></script>
+    <script src="{{url_for('static', filename='js/classie.js')}}"></script>
+
+    <script>
+      (function() {
+
+        var dlgtrigger = document.querySelector( '[data-dialog]' ),
+          somedialog = document.getElementById( dlgtrigger.getAttribute( 'data-dialog' ) ),
+          dlg = new DialogFx( somedialog );
+
+        dlgtrigger.addEventListener( 'click', dlg.toggle.bind(dlg) );
+
+      })();
+    </script>
+
   {% block footer_scripts %}
   {% endblock %}
 
