--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -55,7 +55,7 @@
         <nav class="collapse navbar-collapse" id="navbar-collapse-menu">
           <ul class="nav navbar-nav navbar-right">
 
-            <li>
+            <li class="navbar-submit">
               <a data-dialog="submit" class="trigger">Submit</a>
             </li>
 
