--- a/blender-today/application/templates/posts/submit.html
+++ b/blender-today/application/templates/posts/submit.html
@@ -6,145 +6,7 @@
 <div class="col-md-9">
 	<div class="post-submit">
 
-		<form role="form" method="POST" enctype="multipart/form-data" action="{{url_for('posts.submit')}}">
-			{{ form.hidden_tag() }}
-
-			{# What type is it? #}
-			<div class="row">
-				<div class="col-md-12">
-					<h3>What type of post is it?</h3>
-				</div>
-			</div>
-			<div class="row post-submit-field-type">
-				<div class="col-md-6">
-					<a data-role="button" data-val="1" class="select-change post-submit-field-type-button">
-						<div class="post-submit-field-type-button-icon">
-							<span class="fa-stack fa-2x fa-lg">
-								<i class="fa fa-circle-thin fa-stack-2x"></i>
-								<i class="fa fa-stack-1x fa-link"></i>
-							</span>
-						</div>
-						<div class="post-submit-field-type-button-text">
-							It's a Link
-							<small>The title will link directly there</small>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-6">
-					<a data-role="button" data-val="2" class="select-change post-submit-field-type-button">
-						<div class="post-submit-field-type-button-icon">
-							<span class="fa-stack fa-2x fa-lg">
-								<i class="fa fa-circle-thin fa-stack-2x"></i>
-								<i class="fa fa-stack-1x fa-file-text-o"></i>
-							</span>
-						</div>
-						<div class="post-submit-field-type-button-text">
-							It's an Article
-							<small>Type in </small>
-						</div>
-					</a>
-				</div>
-			</div>
-
-			<div class="row post-submit-div-title">
-				<div class="col-md-12">
-					<div class="form-group">
-						{{ form.title(class='form-control post-submit-field-title', placeholder='Pick a Title') }}
-						{% if form.title.errors %}
-							<ul class="error">
-								{% for error in form.title.errors %}<li>{{ error }}</li>{% endfor %}
-							</ul>
-						{% endif %}
-					</div>
-				</div>
-			</div>
-
-			<div class="row post-submit-div-url">
-				<div class="col-md-12">
-					<div class="form-group">
-						{{ form.url(class='form-control post-submit-field-url', placeholder='URL (with http://)') }}
-					</div>
-				</div>
-			</div>
-
-			<div class="row post-submit-div-category">
-				<div class="col-md-6">
-					What Category does it fit in?
-				</div>
-				<div class="col-md-6">
-					<div class="form-group">
-						{{ form.category_id(class='form-control post-submit-field-category', placeholder='Category') }}
-					</div>
-				</div>
-			</div>
-
-			<div class="row post-submit-div-content">
-				<div class="col-md-12">
-					<div class="form-group">
-						{{ form.content(class='form-control post-submit-field-content', id='post_content') }}
-					</div>
-				</div>
-			</div>
-
-			<div class="row post-submit-div-picture">
-				<div class="col-md-12">
-					<div class="form-group">
-						{{ form.picture(class='form-control post-submit-field-picture') }}
-					</div>
-				</div>
-			</div>
-
-			<div class="post-submit-div-submit">
-				<button type="submit" class="btn btn-default btn-block btn-success submit post-submit-field-submit" value="Go">
-					<i class="fa fa-check"></i> Submit
-				</button>
-			</div>
-
-				<select id="post_type_id" name="post_type_id" placeholder="Post Type" class="hidden">
-					<option value="1">Link</option>
-					<option value="2">Text</option>
-				</select>
-
-		</form>
+		{% include 'posts/form.html' %}
 	</div> <!-- post-submit -->
 </div>
-{% endblock %}
-
-{% block footer_scripts %}
-	<script src="//cdn.ckeditor.com/4.4.7/basic/ckeditor.js"></script>
-	<script type="text/javascript">
-
-	CKEDITOR.replace( 'post_content', {
-		removePlugins: 'elementspath',
-		resize_enabled: false
-	});
-
-	CKEDITOR.config.forcePasteAsPlainText = true;
-
-		$('.select-change').click(function(){ 
-		    $('#post_type_id').val($(this).data('val')).trigger('change');
-		    console.log($('#post_type_id').val());
-		})
-
-		$('.select-change').click(function(){ 
-			if ($('#post_type_id').val() == 1){
-				$('.post-submit-div-title').fadeIn();
-				$('.post-submit-div-category').fadeIn();
-				$('.post-submit-div-content').fadeOut();
-				$('.post-submit-div-picture').fadeOut();
-				$('.post-submit-div-url').fadeIn();
-				$('.post-submit-div-submit').fadeIn();
-			};
-			if ($('#post_type_id').val() == 2){
-				$('.post-submit-div-title').fadeIn();
-				$('.post-submit-div-category').fadeIn();
-				$('.post-submit-div-content').fadeIn();
-				$('.post-submit-div-picture').fadeIn();
-				$('.post-submit-div-url').fadeOut('fast');
-				$('.post-submit-div-submit').fadeIn();
-			};
-		});
-		console.log($('#post_type_id').val());
-
-	</script>
 {% endblock %}
