--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+
 {% block page_title %}
 	{% if title == 'index_category' %}
 		{{category}}
@@ -8,7 +9,10 @@
 {% endblock%}
 
 {% block body %}
-<h3>{% if title == 'index_category' %}
+<div class="row post-index">
+	<div class="col-md-9">
+
+	<h3>{% if title == 'index_category' %}
 			<a href="{{url_for('posts.index')}}">All</a>
 			<strong>·</strong>
 			<a href="{{url_for('index')}}{{category}}" class="text-capitalize">{{category}}</a>
@@ -17,10 +21,8 @@
 		{% endif %}
 
 		<span class="badge">({{posts|length}})</span>
-</h3>
+	</h3>
 
-<div class="row post-index">
-	<div class="col-md-9">
 		{% for post in posts %}
 		<div class="row post-index-item
 								{{ loop.cycle('odd', 'even') }}">
@@ -95,6 +97,9 @@
 		</div>
 		{% endfor %}
 		<div class="post-index-end"><i class="bf-blender"></i></div>
+	</div>
+	<div class="col-md-3">
+		{% include '_sidebar.html' %}
 	</div>
 </div>
 {% endblock %}
