--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -1,4 +1,5 @@
 {% extends 'layout.html' %}
+
 {% block page_title %}{{post.title}}{% endblock %}
 
 {% block header %}
@@ -6,15 +7,15 @@
 {% endblock %}
 
 {% block body %}
+<div class="row post-view">
 <div class="col-md-9">
-
 	<ol class="breadcrumb">
 		<li><a href="{{url_for('index')}}">Home</a></li>
 		<li><a href="{{url_for('index')}}{{post.category.url}}">{{post.category}}</a></li>
 		<li class="active">{{post.title}}</li>
 	</ol>
 
-	<div class="post-view">
+	<div class="post-view-container">
 		<div class="post-view-rate">
 			<a class="up{% if post.user_rating and post.user_rating.is_positive %} rated{% endif %}" href="{{url_for('posts.rate', uuid=post.uuid, rating='1')}}" title="Upvote, click again to undo">
 				<i class="fa fa-angle-up"></i>
@@ -174,6 +175,10 @@
 		</div> <!-- post-view-comments -->
 	</div> <!-- post-view -->
 </div> <!-- col-md -->
+<div class="col-md-3">
+	{% include '_sidebar.html' %}
+</div>
+</div> <!-- row -->
 {% endblock %}
 
 {% block footer_scripts %}
