--- a/blender-today/application/templates/posts/form.html
+++ b/blender-today/application/templates/posts/form.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row post-submit-div-title">
         <div class="col-md-12">
             <div class="form-group">
                 {{ submit_post_form.title(class='form-control post-submit-field-title', placeholder='Pick a Title') }}
@@ -59,7 +59,7 @@
         </div>
     </div>
 
-    <div class="row ">
+    <div class="row post-submit-div-category">
         <div class="col-md-6">
             What Category does it fit in?
         </div>
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row post-submit-div-picture">
         <div class="col-md-12">
             <div class="form-group">
                 {{ submit_post_form.picture(class='form-control post-submit-field-picture') }}
