--- a/blender-today/application/templates/_sidebar.html
+++ b/blender-today/application/templates/_sidebar.html
@@ -1,6 +1,6 @@
 	<div class="nav-sidebar branding">
 		<img class="nav-sidebar-mug" src="{{url_for('static', filename='images/today_manumug_150x150.jpg')}}"/>
-		<h3>Blender Today</h3>
+		<h3>Blender<small>.</small>Today</h3>
 		<p>
 			You decide what makes the news
 		</p>
