Remove gradient from CKEditor comments

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -757,11 +757,12 @@ body.cke_editable.cke_editable_themed.cke_contents_ltr
 	font-family: $font_body !important
 	font-size: 1.2em
 
-span#cke_1_top
+span#cke_1_top, span#cke_2_top
 	padding: 5px 5px 0 5px !important
 	border: none
 	background-image: none
 	background-color: transparent !important
+	resize: none
 	+box-shadow-none
 
 span.cke_toolgroup
